feat: finaliza pagina

--- a/assets/styles/colors.css
+++ b/assets/styles/colors.css
@@ -1,4 +1,6 @@
 :root {
     --roxo-principal: #B67DFF;
+    --roxo-hover: #7753a5;
+    --roxo-secundario: #b57dff77;
     --cor-linkks: #626262;
 }
